Test/Files/Parser/FullParserTestCases/FullTests/Out/testcase91-03.out
<Expr> ::= Integer
<Expr> ::= Integer
<Expr> ::= <Expr> + <Expr>
<Stmt> ::= System.out.println ( <Expr> )
<StmtList> ::= epsilon
<StmtList> ::= <Stmt> <StmtList>
<MainClassDecl> ::= class ID { public static void main ( String [ ] ID ) { <StmtList> } }


Parse error on line 8:
...ol	}}class Test ing{//broken!	publi
-------------------^
Expecting 'extends', '{'